ec2.tf
resource "aws_key_pair" "deployer" {
  key_name   = var.key_name # must match the existing key name
  public_key = var.public_key
  lifecycle {
    ignore_changes = [public_key]
  }
}

resource "aws_eip" "frontend_ip" {
  instance = aws_instance.frontend.id
}

resource "aws_eip" "backend_ip" {
  instance = aws_instance.backend.id
}

resource "aws_instance" "frontend" {
  ami                    = "ami-0df7a207adb9748c7"
  instance_type          = "t2.micro"
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.frontend_sg.id]

  user_data = <<-EOF
              #!/bin/bash
              apt update
              apt install -y docker.io
              systemctl start docker
              systemctl enable docker
              EOF

  tags = {
    Name = "FrontendServer"
  }
}

resource "aws_instance" "backend" {
  ami                    = "ami-0df7a207adb9748c7"
  instance_type          = "t2.micro"
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.backend_sg.id]

  user_data = <<-EOF
              #!/bin/bash
              apt update
              apt install -y docker.io
              systemctl start docker
              systemctl enable docker
              EOF

  tags = {
    Name = "BackendServer"
  }
}
